# app/Models/Order.php
@@ -1,0 +1,48 @@
+<?php
+
+namespace App\Models;
+
+use App\Enums\OrderStatus;
+use App\Enums\PaymentStatus;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Support\Carbon;
+
+/**
+ * @property int $id
+ * @property int $user_id
+ * @property string $invoice_number
+ * @property float $total_amount
+ * @property OrderStatus $status
+ * @property PaymentStatus $payment_status
+ * @property Carbon $created_at
+ * @property Carbon $updated_at
+ */
+class Order extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'user_id',
+        'invoice_number',
+        'total_amount',
+        'status',
+        'payment_status',
+    ];
+
+    protected $casts = [
+        'total_amount' => 'float',
+        'status' => OrderStatus::class,
+        'payment_status' => PaymentStatus::class,
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    public function items()
+    {
+        return $this->hasMany(OrderItem::class);
+    }
+}
